# resume-domain-classifier

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  README.md  pyproject.toml
.dvc/: config
configs/: infer.yaml  train.yaml
configs/data/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: tfidf_linear.yaml
configs/preprocessing/: default.yaml
configs/train/: default.yaml
data/raw/: dataset.csv.dvc
resume_domain_classifier/: commands.py
resume_domain_classifier/data/: datasets.py  download_data.py
resume_domain_classifier/inference/: predict.py
resume_domain_classifier/models/: lightning_module.py
resume_domain_classifier/preprocessing/: text_cleaning.py
resume_domain_classifier/training/: train.py
resume_domain_classifier/utils/: logging.py
tests/: test_smoke.py
