[tool.poetry]
name = "resume-domain-classifier"
version = "0.1.0"
description = "Automatic resume domain classification (MLOps)"
authors = ["Semenyuk Darya"]
readme = "README.md"
packages = [{ include = "resume_domain_classifier" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^2.0.0"
pandas = "^2.2.0"
scikit-learn = "^1.5.0"
torch = "^2.4.0"
pytorch-lightning = "^2.4.0"
torchmetrics = "^1.5.0"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
fire = "^0.7.0"
mlflow = "^2.16.0"
dvc = "^3.55.0"
dvc-s3 = "^3.2.2"
joblib = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pytest = "^8.3.0"
pytest-cov = "^5.0.0"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
deptry = "^0.24.0"

[tool.poetry.scripts]
resume-domain-classifier = "resume_domain_classifier.commands:main"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["resume_domain_classifier"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
